[package]
name = "manga_shelf"
version = "0.1.0"
description = "Read & Store Manga"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "app"
path = "./src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
imagesize = { version = "0.12.0" }
chrono = { version = "0.4.38", features = ["serde"] }
regex = { version = "1.10.4" }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
sysinfo = "0.32.0"

[lib]
name = "manga_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]
